--- a/AP/CSS/style.css
+++ b/AP/CSS/style.css
@@ -20,8 +20,7 @@ body::-webkit-scrollbar-thumb {
 
 /* Default styles for navbar */
 .navbar {
-  background: rgba(0, 0, 0, 0.132);
-  position: fixed;
+  position: absolute;
   top: 20px;
   width: 100%;
   z-index: 1000;
