--- a/AP/CSS/style.css
+++ b/AP/CSS/style.css
@@ -158,6 +158,7 @@ p {
   color: white;
   width: 90%; /* Adjust as needed */
   margin: 0 auto;
+  margin-top: -45px;
   font-size: 16px; /* Base font size */
 }
 
@@ -187,5 +188,35 @@ p {
   .blue-container p {
     width: 60%; /* Adjust as needed */
     font-size: 22px; /* Increase font size for larger screens */
+  }
+}
+
+
+
+.next-container {
+  border: 2px solid red;
+  background-color: white;
+  text-align: center;
+  padding: 50px 20px;
+  margin: -50px auto 0; /* Adjust margin-top to push it above the blue container */
+  width: 70%; /* Adjust width as needed */
+}
+
+.frontend-heading {
+  font-size: 28px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.next-container p {
+  font-size: 18px;
+  color: #666;
+  margin-bottom: 30px;
+}
+
+/* Responsive CSS */
+@media screen and (max-width: 768px) {
+  .next-container {
+    max-width: 90%; /* Adjust width for smaller screens */
   }
 }
