--- a/AP/CSS/style.css
+++ b/AP/CSS/style.css
@@ -119,7 +119,7 @@ body::-webkit-scrollbar-thumb {
   height: auto; /* Maintain the image's aspect ratio */
   display: block; /* Ensure the image behaves as a block element */
   margin: 0 auto; /* Center the image horizontally */
-  margin-top: 20px;
+  margin-top: -20px;
 }
 
 h1 {
@@ -194,7 +194,7 @@ p {
 
 
 .next-container {
-  border: 2px solid red;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.782);
   background-color: white;
   text-align: center;
   padding: 50px 20px;
@@ -203,9 +203,9 @@ p {
 }
 
 .frontend-heading {
-  font-size: 28px;
+  font-size: 35px;
   color: #333;
-  margin-bottom: 20px;
+  margin-top: -10px;
 }
 
 .next-container p {
@@ -214,9 +214,99 @@ p {
   margin-bottom: 30px;
 }
 
+.next-container img {
+  width: 15%; /* Baki images ka width 15% set kiya gaya hai */
+  max-width: 100%; /* Image ka maximum width parent container ke hisaab se set karega */
+  height: auto; /* Image ki height ko maintain karega */
+  aspect-ratio: 2/2; /* Image ka aspect ratio maintain karega */
+  object-fit: contain; /* Image ko contain karega, jisse aspect ratio maintain ho */
+}
+
+#html{
+  width: 14.6%; 
+  height: auto; 
+}
+
 /* Responsive CSS */
 @media screen and (max-width: 768px) {
   .next-container {
     max-width: 90%; /* Adjust width for smaller screens */
   }
+}
+
+
+.my-skills-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Center vertically */
+  height: 100vh; /* Optional: Full height of the viewport */
+}
+
+.my-skills {
+  margin: 30px 0;
+  background-color: #6E07F3;
+  border-radius: 10px;
+  height: 215px;
+  text-align: center;
+  padding-top: 15px;
+  margin-top: 50px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.542);
+}
+
+.my-skills h2 {
+  color: #ffffff;
+  font-size: 24px;
+  margin-bottom: 25px;
+  margin-top: 10px;
+}
+
+.skill-bar {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.skill-label {
+  width: 120px;
+  font-size: 18px;
+  color: #ffffff;
+}
+
+.skill-progress {
+  flex-grow: 1;
+  height: 20px;
+  margin-right: 30px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.414),
+    inset -2px -2px 3px rgba(0, 0, 0, 0.542);
+}
+
+.skill-html,
+.skill-css,
+.skill-react {
+  height: 100%;
+  border-radius: 10px;
+}
+
+.skill-html {
+  width: 90%;
+  background: linear-gradient(90deg, #ff7854, #fd267d);
+  box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.414),
+    inset 2px 2px 5px rgba(0, 0, 0, 0.542);
+}
+
+.skill-css {
+  width: 75%;
+  background: linear-gradient(90deg, #17ead9, #9447c7);
+  box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.414),
+    inset 2px 2px 5px rgba(0, 0, 0, 0.542);
+}
+
+.skill-react {
+  width: 30%;
+  background: linear-gradient(90deg, #54b8d4, #2976f1);
+  box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.414),
+    inset 2px 2px 5px rgba(0, 0, 0, 0.542);
 }
