--- a/AP/CSS/style.css
+++ b/AP/CSS/style.css
@@ -116,17 +116,18 @@ body::-webkit-scrollbar-thumb {
 }
 
 .front img {
-  width: 90%;
+  width: 50%;
   height: 10%;
   display: block;
   margin: 13px auto 0; /* Center the image vertically and horizontally */
+  margin-bottom: -28px;
 }
 
 /* Apply negative margin only when screen size is larger */
 @media screen and (min-width: 768px) {
   .front img {
     max-width: 60%;
-    margin-top: 200px; /* Adjusted margin for responsiveness */
+    margin-top: 100px; /* Adjusted margin for responsiveness */
   }
 }
 
