--- a/AP/CSS/style.css
+++ b/AP/CSS/style.css
@@ -104,7 +104,11 @@ body::-webkit-scrollbar-thumb {
 .front p {
   width: 60%;
   margin: 10px auto 0;
-  font-size: 30px; /* Default font size */
+  font-size: 25px; /* Default font size */
+}
+
+.front strong {
+  font-size: 30px; /* Adjust the font size as needed */
 }
 
 /* Apply responsive font size */
