--- a/AP/CSS/style.css
+++ b/AP/CSS/style.css
@@ -29,7 +29,7 @@ body::-webkit-scrollbar-thumb {
 .navbar a {
   float: left;
   display: block;
-  color: #15077a;
+  color: #173a48;
   text-align: center;
   padding: 14px 16px;
   font-size: 17px;
@@ -37,9 +37,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 .navbar a:hover {
-  background-color: #0082ad;
-  border-radius: 40px;
-  color: black;
+  background-color: #173a48;
+  border-radius: 25px;
+  color: rgb(255, 255, 255);
 }
 
 .navbar-logo {
@@ -77,7 +77,7 @@ body::-webkit-scrollbar-thumb {
     right: 0;
     background-color: #f9f9f9; /* Adjust background color as needed */
     width: 100%; /* Adjust width as needed */
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); /* Adjust box shadow as needed */
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); /* Adjust box shadow as needed */
   }
 
   .navbar-right a {
@@ -93,11 +93,27 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
+#navbarOptions button {
+  background-color: white; 
+  color: black; 
+  padding: 10px 20px;
+  font-size: 18px; 
+  border: 3px solid #173a48;
+  border-radius: 22px;
+  cursor: pointer; 
+  margin-top: 2.5px; 
+}
+
+/* Styles for the button hover effect */
+#navbarOptions button:hover {
+  background-color: #173a48; /* Change background color on hover */
+  color: white;
+}
 
 /* Frontend developer */
 
 .front {
-  text-align: center; 
+  text-align: center;
   margin-top: 140px;
 }
 
@@ -136,10 +152,11 @@ body::-webkit-scrollbar-thumb {
 }
 
 h1 {
-  font-family: sans-serif;
+  color: #173a48;
+  font-family: Eurostile;
 }
 p {
-  font-family: sans-serif;
+  font-family: inherit;
   font-size: x-large;
 }
 
@@ -158,7 +175,7 @@ p {
 }
 
 .blue-container {
-  background-color: #6E07F3;
+  background-color: #173a48;
   width: 100%;
   height: 60vh;
   display: flex;
@@ -204,8 +221,6 @@ p {
   }
 }
 
-
-
 .next-container {
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.782);
   background-color: white;
@@ -235,9 +250,9 @@ p {
   object-fit: contain; /* Image ko contain karega, jisse aspect ratio maintain ho */
 }
 
-#html{
-  width: 14.6%; 
-  height: auto; 
+#html {
+  width: 14.6%;
+  height: auto;
 }
 
 /* Responsive CSS */
@@ -246,7 +261,6 @@ p {
     max-width: 90%; /* Adjust width for smaller screens */
   }
 }
-
 
 .my-skills-wrapper {
   display: flex;
@@ -257,7 +271,7 @@ p {
 
 .my-skills {
   margin: 30px 0;
-  background-color: #6E07F3;
+  background-color: #6e07f3;
   border-radius: 10px;
   height: 215px;
   text-align: center;
