--- a/AP/CSS/style.css
+++ b/AP/CSS/style.css
@@ -317,8 +317,8 @@ h1 {
   border: 2px solid black ;
   width: 100%;
   background-color: #173a48;
-  /* margin: 0 auto; */
-  margin: -30px auto 0;
+  margin: auto 0;
+  margin-top: 40px;
 }
 
 .container h1{
@@ -358,19 +358,27 @@ h1 {
 .project-link a {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
+  background-color: #ffffff;
+  color: #173a48;
   text-decoration: none;
-  border-radius: 5px;
+  border: 3px solid #173a48;
+  border-radius: 11px;
 }
 
 .project-link a:hover {
-  background-color: #0056b3;
+  background-color: #173a48;
+  color: white;
 }
 
 /* Media queries for responsiveness */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1300px) {
   .project {
-      width: 100%; /* Make projects take up full width on screens smaller than 768px */
+      width: 70%; /* Make projects take up full width on screens smaller than 768px */
+      text-align: center;
+      margin: 10px auto;
   }
 }
+
+@media screen and (max-width: 1276px){
+
+} 
