--- a/AP/CSS/style.css
+++ b/AP/CSS/style.css
@@ -254,14 +254,15 @@ h1 {
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.542);
 }
 
-.my-skills h2 {
+/* .my-skills h2 {
   color: #ffffff;
   font-size: 24px;
   margin-bottom: 25px;
   margin-top: 10px;
-}
+} */
 
 .skill-bar {
+  margin-top: 35px;
   display: flex;
   align-items: center;
   margin-bottom: 20px;
@@ -275,7 +276,7 @@ h1 {
 
 .skill-progress {
   flex-grow: 1;
-  height: 20px;
+  height: 15px;
   margin-right: 30px;
   background-color: #ffffff;
   border-radius: 10px;
@@ -293,21 +294,21 @@ h1 {
 
 .skill-html {
   width: 90%;
-  background: linear-gradient(90deg, #ff7854, #fd267d);
+  background-color: #B5D4DF;
   box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.414),
     inset 2px 2px 5px rgba(0, 0, 0, 0.542);
 }
 
 .skill-css {
   width: 75%;
-  background: linear-gradient(90deg, #17ead9, #9447c7);
+  background-color: #B5D4DF;
   box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.414),
     inset 2px 2px 5px rgba(0, 0, 0, 0.542);
 }
 
 .skill-react {
   width: 30%;
-  background: linear-gradient(90deg, #54b8d4, #2976f1);
+  background-color: #B5D4DF;
   box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.414),
     inset 2px 2px 5px rgba(0, 0, 0, 0.542);
 }
@@ -336,7 +337,7 @@ h1 {
 
 .project {
   width: 23.8%;
-  padding: 25px;
+  height: 60vh;
   margin: 8px;
   box-sizing: border-box;
   background-color: #efefef;
@@ -344,17 +345,22 @@ h1 {
   text-align: center;
   border-radius: 8px;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px; /* Optional: Add margin between projects */
 }
 
 .project h2 {
-  margin-top: 0;
+  margin-top: 20px;
 }
 
 .project-link {
   text-align: center;
+  margin-top: 300px;
 }
 
+@media screen and (max-width: 768px) {
+  .project-link {
+    margin-top: 300px; /* Mobil cihazlar için daha küçük bir boşluk */
+  }
+}
 .project-link a {
   display: inline-block;
   padding: 10px 20px;
