--- a/AP/CSS/style.css
+++ b/AP/CSS/style.css
@@ -15,15 +15,17 @@ body {
   color: #000000;
   font-size: 24px;
   text-decoration: none;
-}
+} 
 
 .navbar-right {
+  margin-top: 25px;
   margin-right: 100px;
   display: flex;
   align-items: center;
 }
 
 .navbar-logo {
+  margin-top: 20px;
   margin-left: 100px;
 }
 
@@ -148,8 +150,8 @@ h1 {
   color: white;
   width: 90%; /* Adjust as needed */
   margin: 0 auto;
-  margin-top: -45px;
-  font-size: 16px; /* Base font size */
+  margin-top: -40px;
+  font-size: 7px;
 }
 
 .blue-container p strong {
@@ -181,7 +183,7 @@ h1 {
   /* For screens larger than 1200px */
   .blue-container p {
     width: 60%; /* Adjust as needed */
-    font-size: 22px; /* Increase font size for larger screens */
+    font-size: 18px; /* Increase font size for larger screens */
   }
 }
 
@@ -322,6 +324,25 @@ h1 {
   margin-top: 40px;
 }
 
+
+.project img {
+  width: 85%;
+  height: auto;
+  object-fit: contain; 
+  position: absolute; 
+  margin-top: -180px;
+  left: 50%;
+  transform: translateX(-50%);
+  box-shadow: 0 0 10px black;
+}
+
+/* Responsive styling for smaller screens */
+@media screen and (max-width: 768px) {
+  .project img {
+    max-width: 80%; 
+  }
+}
+
 .container h1{
   font-size: 40px;
   font-weight: 100;
@@ -331,11 +352,13 @@ h1 {
 }
 
 .projects {
+  text-align: center;
   display: flex;
   flex-wrap: wrap;
 }
 
 .project {
+  position: relative;
   width: 23.8%;
   height: 60vh;
   margin: 8px;
@@ -351,9 +374,13 @@ h1 {
   margin-top: 20px;
 }
 
+.project p {
+  margin-bottom: 90px;
+}
+
 .project-link {
   text-align: center;
-  margin-top: 300px;
+  margin-top: 190px;
 }
 
 @media screen and (max-width: 768px) {
@@ -382,6 +409,9 @@ h1 {
       width: 70%; /* Make projects take up full width on screens smaller than 768px */
       text-align: center;
       margin: 10px auto;
+  }
+  .project p {
+    margin-bottom: 90px;
   }
 }
 
