--- a/AP/CSS/style.css
+++ b/AP/CSS/style.css
@@ -304,3 +304,69 @@ h1 {
   box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.414),
     inset 2px 2px 5px rgba(0, 0, 0, 0.542);
 }
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  position: relative;
+}
+
+.container h1 {
+  text-align: center;
+  position: sticky; /* Added position sticky */
+  margin-top: 0px; /* Added top 0 */
+  background-color: white; /* Added background color */
+  padding: 10px 0; /* Added padding */
+  z-index: 1; /* Added z-index */
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
+}
+
+.project {
+  background-color: #f4f4f4;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.project h2 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.project img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+.project-link {
+  text-align: center;
+}
+
+.project-link a {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 8px 16px;
+  background-color: #ffffff;
+  border: 3px solid #173a48;
+  color: #000000;
+  text-decoration: none;
+  border-radius: 10px;
+}
+
+.project-link a:hover{
+  background-color: #173a48;
+  color: white;
+}
+
+@media screen and (max-width: 767px) {
+  .projects {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
