--- a/AP/CSS/style.css
+++ b/AP/CSS/style.css
@@ -333,7 +333,11 @@ h1 {
 
 .project h2 {
   font-size: 1.5rem;
-  margin-bottom: 10px;
+  margin-top: -5px;
+  background-color: #173a48;
+  color: white;
+  padding: 30px;
+  border-top-left-radius: 15px;
 }
 
 .project img {
@@ -366,6 +370,10 @@ h1 {
 @media screen and (max-width: 767px) {
   .projects {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .project h2{
+    text-align: center;
   }
 }
 
